[tool.poetry]
name = "feedback-slack-bot"
version = "0.1.0"
description = "Slack bot for feedback and recognition"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
flask = ">=3.1.0"
gspread = ">=6.1.4"
oauth2client = ">=4.1.3"
requests = ">=2.32.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
